# lupe-flow-micro-entrepreneur-mvp

./: .gitignore  .replit  package-lock.json  package.json  pyproject.toml  replit.md  requirements.txt  supabase_migration_extra_bank.sql  supabase_migration_plan_cycle.sql  supabase_monthly_summaries.sql  supabase_rls_hardened.sql  supabase_schema_v2.sql  supabase_setup.sql  tailwind.config.ts  vercel.json  vite.config.ts  vite.config.ts.timestamp-1775746692407-661c1c98bea2.mjs
api/: index.py
attached_assets/: Pasted--CONTEXTO-E-PAPEL-Atue-como-um-Auditor-S-nior-de-Softwa_1775764529125.txt  Pasted-Aja-como-um-Engenheiro-de-Software-Full-Stack-S-nior-Es_1775665152198.txt  Pasted-Aja-como-um-Engenheiro-de-Software-Full-Stack-S-nior-fo_1775666683115.txt  Pasted-Atue-como-Engenheiro-de-Software-Fullstack-S-nior-O-sis_1775675154680.txt  Pasted-Atue-como-Engenheiro-de-Software-S-nior-Temos-um-limite_1775674005567.txt  Pasted-Atue-como-um-Engenheiro-Full-Stack-e-Auditor-de-Seguran_1775745388000.txt  Pasted-Atue-como-um-Engenheiro-de-Software-S-nior-Execute-as-s_1775850520254.txt  Pasted-Com-base-no-erro-de-autentica-o-e-nas-novas-credenciais_1775678679980.txt  Pasted-Como-seu-Dev-Full-Stack-S-nior-vamos-focar-na-precis-o-_1775743911184.txt  Pasted-Perfeito-Vamos-dar-a-ele-autoridade-total-como-Engenhei_1775847247021.txt
backend/: auth.py  main.py  models.py  pdf_report.py  pluggy_service.py  requirements.txt  storage.py  stripe_billing.py
backend/routes/: demo.py
src/: App.tsx  index.css
src/components/: BankConnectionsCard.tsx  BoxCard.tsx  DemoBanner.tsx  (+4 more)
(+21 files in other folders)
