[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.2",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "reportlab>=4.4.10",
    "stripe>=15.0.1",
    "supabase>=2.28.3",
    "uvicorn[standard]>=0.44.0",
]
